temp fixed Overflow problems for dashboard Notifications

--- a/frontend/css/Landing.css
+++ b/frontend/css/Landing.css
@@ -73,7 +73,7 @@ body {
   flex-flow: column;
   height: fit-content;
   width: fit-content;
-  background-color: rgba(1, 158, 137, 0.418);
+  background-color: rgba(15, 121, 107, 0.418);
   padding: 30px;
 }
 
